--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 body{
   background-color: #559CAD;
   text-align: centre;
+  
+}
+.grid{
+  width: 100px;
+  height: 100px;
+  color: #92374D;
+  background-color: #C1B2AB;
+  
 }
