--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body{
   font-size:100px;
   border-radius: 4px;
   justify-content: center;
-
-  
 }
 .game{
   height:60vmin;
   display: flex;
+  flex-shrink: wrap;
   justify-content: center;
   align-items: center;
+  gap: 1.5vmin;
   
 }
