--- a/style.css
+++ b/style.css
@@ -5,20 +5,21 @@ body{
 }
 .container{
   height: 70vh;
+  justify-content: center;
+  align-items: center;
 }
 .grid{
   width: 18vmin;
   height: 18vmin;
   color: #92374D;
   background-color: #C1B2AB;
-  font-size:100px;
+  font-size:18vmin;
   border-radius: 4px;
-  justify-content: center;
 }
 .game{
   height:60vmin;
   display: flex;
-  flex-shrink: wrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 1.5vmin;
